[gd_scene load_steps=19 format=4 uid="uid://dahljhgyivocf"]

[ext_resource type="Texture2D" uid="uid://dy5uu5sjt7qxc" path="res://Assets/TileMaps/TileMap_Ground.png" id="1_ljsb6"]
[ext_resource type="PackedScene" uid="uid://0l6nbin1kcj5" path="res://Scenes/Player/player.tscn" id="2_mxi1f"]
[ext_resource type="PackedScene" uid="uid://cpavxkcemfjrh" path="res://Scenes/highway_lane.tscn" id="4_v5c12"]
[ext_resource type="Texture2D" uid="uid://dfkd86ymon6xu" path="res://Assets/Sprite_Enemies/Car_Base.png" id="5_o0ban"]
[ext_resource type="Script" path="res://Scripts/Enemies/highway_lanes_collision.gd" id="5_t66bu"]
[ext_resource type="Texture2D" uid="uid://cwkv032ajwork" path="res://Assets/Sprite_Enemies/Truck.png" id="6_jo0dy"]
[ext_resource type="Texture2D" uid="uid://b4k8kr878vh76" path="res://Assets/Sprite_Enemies/Moto_Base.png" id="7_l8ewj"]
[ext_resource type="Texture2D" uid="uid://cafv3xmw43ns6" path="res://Assets/Sprite_Enemies/Bus.png" id="8_car6q"]
[ext_resource type="PackedScene" uid="uid://cwl8bmushqwxe" path="res://Scenes/Level/water.tscn" id="9_7j7eu"]
[ext_resource type="PackedScene" uid="uid://6jd2ql0kp1tc" path="res://Scenes/Level/water_lane.tscn" id="10_ubuc8"]
[ext_resource type="PackedScene" uid="uid://cbopiaoktm3wx" path="res://Scenes/Level/croco_lane.tscn" id="11_ieehi"]
[ext_resource type="Script" path="res://Scripts/Global/game_state_manager.gd" id="13_0sm5o"]
[ext_resource type="PackedScene" uid="uid://dcvqrhxem4wb" path="res://Scenes/Level/Home/home_slot.tscn" id="14_d2whn"]
[ext_resource type="Script" path="res://Scripts/Home/home_slots.gd" id="14_h3al6"]
[ext_resource type="PackedScene" uid="uid://yy28xqi8d8lh" path="res://Scenes/UI/UItscn.tscn" id="16_cbig0"]
[ext_resource type="PackedScene" uid="uid://c1yqfw7jqo5cy" path="res://Shaders/CRT_SHADERtscn.tscn" id="16_ck4n0"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7twil"]
texture = ExtResource("1_ljsb6")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:1/0 = 0
0:2/0 = 0
0:3/0 = 0
0:4/0 = 0
1:0/0 = 0
1:1/0 = 0
1:2/0 = 0
1:3/0 = 0
1:4/0 = 0

[sub_resource type="TileSet" id="TileSet_rx6d1"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_7twil")

[node name="MainScene" type="Node"]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAAAAAAAAAAMAAAADAAAAAAAAAAMAAAAFAAAAAAAAAAMAAAAHAAAAAAAAAAMAAAAJAAAAAAAAAAMAAAAIAAAAAAAAAAIAAAAKAAAAAAAAAAIAAAAGAAAAAAAAAAIAAAAEAAAAAAAAAAIAAAACAAAAAAAAAAIAAAAAAAAAAAAAAAIAAAAAAAEAAAAAAAEAAAAAAAIAAAABAAAAAAAAAAMAAAABAAAAAAAAAAQAAAABAAAAAAAAAAUAAAAAAAAAAAAKAAUAAAAAAAAAAAAJAAUAAAAAAAAAAAAIAAUAAAAAAAAAAAAHAAUAAAAAAAAAAAAGAAUAAAAAAAAAAAAFAAUAAAAAAAAAAAAEAAUAAAAAAAAAAAADAAUAAAAAAAAAAAACAAUAAAAAAAAAAAABAAUAAAAAAAAAAAAKAAQAAAABAAAAAAAKAAMAAAABAAAAAAAKAAIAAAABAAAAAAAKAAEAAAAAAAEAAAADAAQAAAABAAAAAAADAAMAAAABAAAAAAADAAIAAAABAAAAAAADAAEAAAAAAAEAAAACAAEAAAAAAAEAAAABAAEAAAAAAAEAAAABAAIAAAABAAAAAAABAAMAAAABAAAAAAABAAQAAAABAAAAAAACAAQAAAABAAAAAAACAAMAAAABAAAAAAACAAIAAAABAAAAAAAEAAEAAAAAAAEAAAAEAAIAAAABAAAAAAAEAAMAAAABAAAAAAAEAAQAAAABAAAAAAAFAAQAAAABAAAAAAAFAAMAAAABAAAAAAAFAAIAAAABAAAAAAAFAAEAAAAAAAEAAAAGAAEAAAAAAAEAAAAGAAIAAAABAAAAAAAGAAMAAAABAAAAAAAGAAQAAAABAAAAAAAHAAQAAAABAAAAAAAHAAMAAAABAAAAAAAHAAIAAAABAAAAAAAHAAEAAAAAAAEAAAAIAAEAAAAAAAEAAAAIAAIAAAABAAAAAAAIAAMAAAABAAAAAAAIAAQAAAABAAAAAAAJAAQAAAABAAAAAAAJAAMAAAABAAAAAAAJAAIAAAABAAAAAAAJAAEAAAAAAAEAAAAAAAYAAAABAAEAAAABAAYAAAABAAEAAAACAAYAAAABAAEAAAADAAYAAAABAAEAAAAEAAYAAAABAAEAAAAFAAYAAAABAAEAAAAGAAYAAAABAAEAAAAHAAYAAAABAAEAAAAIAAYAAAABAAEAAAAJAAYAAAABAAEAAAAKAAYAAAABAAEAAAAKAAcAAAABAAIAAAAJAAcAAAABAAIAAAAIAAcAAAABAAIAAAAHAAcAAAABAAIAAAAGAAcAAAABAAIAAAAFAAcAAAABAAIAAAAEAAcAAAABAAIAAAADAAcAAAABAAIAAAACAAcAAAABAAIAAAABAAcAAAABAAIAAAAAAAcAAAABAAIAAAAAAAgAAAABAAMAAAAAAAkAAAABAAMAAAAAAAoAAAABAAMAAAAAAAsAAAABAAMAAAAAAAwAAAABAAMAAAAKAAwAAAABAAMAAAAJAAwAAAABAAMAAAAIAAwAAAABAAMAAAAHAAwAAAABAAMAAAAGAAwAAAABAAMAAAAFAAwAAAABAAMAAAAEAAwAAAABAAMAAAADAAwAAAABAAMAAAACAAwAAAABAAMAAAABAAwAAAABAAMAAAAKAAsAAAABAAMAAAAKAAoAAAABAAMAAAAKAAkAAAABAAMAAAAKAAgAAAABAAMAAAAEAAsAAAABAAMAAAAEAAoAAAABAAMAAAAEAAkAAAABAAMAAAAEAAgAAAABAAMAAAADAAgAAAABAAMAAAACAAgAAAABAAMAAAABAAgAAAABAAMAAAABAAkAAAABAAMAAAABAAoAAAABAAMAAAABAAsAAAABAAMAAAACAAsAAAABAAMAAAACAAoAAAABAAMAAAACAAkAAAABAAMAAAADAAkAAAABAAMAAAADAAoAAAABAAMAAAADAAsAAAABAAMAAAAFAAgAAAABAAMAAAAFAAkAAAABAAMAAAAFAAoAAAABAAMAAAAFAAsAAAABAAMAAAAGAAsAAAABAAMAAAAGAAoAAAABAAMAAAAGAAkAAAABAAMAAAAGAAgAAAABAAMAAAAHAAgAAAABAAMAAAAHAAkAAAABAAMAAAAHAAoAAAABAAMAAAAHAAsAAAABAAMAAAAIAAsAAAABAAMAAAAIAAoAAAABAAMAAAAIAAkAAAABAAMAAAAIAAgAAAABAAMAAAAJAAgAAAABAAMAAAAJAAkAAAABAAMAAAAJAAoAAAABAAMAAAAJAAsAAAABAAMAAAAAAA0AAAABAAQAAAABAA0AAAABAAQAAAACAA0AAAABAAQAAAADAA0AAAABAAQAAAAEAA0AAAABAAQAAAAFAA0AAAABAAQAAAAGAA0AAAABAAQAAAAHAA0AAAABAAQAAAAIAA0AAAABAAQAAAAJAA0AAAABAAQAAAAKAA0AAAABAAQAAAA=")
tile_set = SubResource("TileSet_rx6d1")

[node name="UI" parent="." instance=ExtResource("16_cbig0")]

[node name="CanvasLayer" parent="." instance=ExtResource("16_ck4n0")]

[node name="Water" parent="." instance=ExtResource("9_7j7eu")]
position = Vector2(176, 112)

[node name="Player" parent="." instance=ExtResource("2_mxi1f")]
position = Vector2(176, 432)

[node name="HighwayLanes" type="Node" parent="."]
process_mode = 4
script = ExtResource("5_t66bu")

[node name="HighwayLane" parent="HighwayLanes" instance=ExtResource("4_v5c12")]
position = Vector2(176, 400)
vehicle_texture = ExtResource("5_o0ban")
vehicle_collision_size = Vector2(26, 20)

[node name="HighwayLane2" parent="HighwayLanes" instance=ExtResource("4_v5c12")]
position = Vector2(176, 368)
direction = -1
vehicle_texture = ExtResource("6_jo0dy")
distance_between_vehicles = 120
vehicles_speed = 120.0
movement_x_limit = -352.0
vehicle_collision_size = Vector2(34, 20)

[node name="HighwayLane3" parent="HighwayLanes" instance=ExtResource("4_v5c12")]
position = Vector2(176, 336)
vehicle_texture = ExtResource("7_l8ewj")
distance_between_vehicles = 35
vehicles_speed = 250.0
vehicle_collision_size = Vector2(22, 20)

[node name="HighwayLane4" parent="HighwayLanes" instance=ExtResource("4_v5c12")]
position = Vector2(176, 304)
vehicle_texture = ExtResource("8_car6q")
distance_between_vehicles = 200
vehicles_speed = 80.0
vehicle_collision_size = Vector2(58, 20)

[node name="HighwayLane5" parent="HighwayLanes" instance=ExtResource("4_v5c12")]
position = Vector2(176, 272)
vehicle_texture = ExtResource("5_o0ban")
distance_between_vehicles = 200
vehicles_speed = 80.0
vehicle_collision_size = Vector2(26, 20)

[node name="WaterLanes" type="Node" parent="."]

[node name="WaterLane" parent="WaterLanes" instance=ExtResource("10_ubuc8")]
position = Vector2(176, 176)
distance_between_logs = 64
log_speed = 80.0
movement_x_limit = 200.0

[node name="CrocoLane" parent="WaterLanes" instance=ExtResource("11_ieehi")]
position = Vector2(176, 144)
turtle_sections_lenght = [4, 3, 3]
distance_between_turtle_sections = 220
turtle_speed = 60.0
movement_x_limit = 300.0

[node name="WaterLane3" parent="WaterLanes" instance=ExtResource("10_ubuc8")]
position = Vector2(176, 112)
logs_length = [5, 5, 4]
distance_between_logs = 64
log_speed = 80.0
movement_x_limit = 352.0

[node name="CrocoLane2" parent="WaterLanes" instance=ExtResource("11_ieehi")]
position = Vector2(176, 80)
distance_between_turtle_sections = 90
turtle_speed = 80.0
movement_x_limit = -360.0
movement_direction = -1

[node name="WaterLane5" parent="WaterLanes" instance=ExtResource("10_ubuc8")]
position = Vector2(176, 48)
distance_between_logs = 64
log_speed = 80.0
movement_x_limit = 280.0

[node name="GameStateManager" type="Node" parent="."]
script = ExtResource("13_0sm5o")

[node name="HomeSlots" type="Node" parent="."]
script = ExtResource("14_h3al6")

[node name="HomeSlot" parent="HomeSlots" instance=ExtResource("14_d2whn")]
position = Vector2(48, 16)

[node name="HomeSlot2" parent="HomeSlots" instance=ExtResource("14_d2whn")]
position = Vector2(112, 16)

[node name="HomeSlot3" parent="HomeSlots" instance=ExtResource("14_d2whn")]
position = Vector2(176, 16)

[node name="HomeSlot4" parent="HomeSlots" instance=ExtResource("14_d2whn")]
position = Vector2(240, 16)

[node name="HomeSlot5" parent="HomeSlots" instance=ExtResource("14_d2whn")]
position = Vector2(304, 16)
